fix(CreateListModal): fix background not covering whole viewport

--- a/root/frontend/src/components/EditListModal/EditListModal.css
+++ b/root/frontend/src/components/EditListModal/EditListModal.css
@@ -1,14 +1,3 @@
-.background {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
-  z-index: 2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .modal-container {
   z-index: 10;
   height: 225px;
